# veridian-atlas

./: .dockerignore  .gitignore  ADDING_NEW_DEALS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-build.yml  lint.yml  tests.yml
docs/diagrams/: ARCHITECTURE.md
src/frontend/: .gitignore  index.html  tailwind.config.cjs
src/frontend/src/: App.jsx  index.css
src/frontend/src/api/: client.js
src/frontend/src/components/: CitationPanel.jsx  ConversationView.jsx  PromptInput.jsx  Sidebar.jsx
src/veridian_atlas/api/: schemas.py  server.py
src/veridian_atlas/cli/: run_chunker.py  run_index.py  run_ingestion.py  run_project.py  run_query.py
src/veridian_atlas/data_pipeline/: router.py
src/veridian_atlas/data_pipeline/loaders/: text_loader.py
src/veridian_atlas/data_pipeline/processors/: chunker.py  embedder.py  index_builder.py
src/veridian_atlas/rag_engine/pipeline/: rag_engine.py
src/veridian_atlas/rag_engine/services/: local_llm.py  query_service.py
src/veridian_atlas/utils/: logger.py
tests/: conftest.py
tests/test_api/: test_health.py  test_query_endpoint.py  test_server_endpoints.py
tests/test_cli/: test_cli_commands.py
tests/test_data_pipeline/: test_chunking.py  test_ingest.py
tests/test_rag_engine/: test_answer_generator.py  test_retriever.py
veridian-atlas-ui/: index.html  package-lock.json  package.json
veridian-atlas-ui/src/: App.jsx  index.css
veridian-atlas-ui/src/api/: client.js
veridian-atlas-ui/src/components/: AppHeader.jsx  CitationPanel.jsx  ConversationView.jsx  DealSelector.jsx  LoadingState.jsx  PromptInput.jsx  Sidebar.jsx
veridian_atlas/api/: schemas.py  server.py
veridian_atlas/data/deals/AxiomCapital_V/processed/: chunks.jsonl  sections.json
veridian_atlas/data/deals/AxiomCapital_V/raw/: Credit_Agreement_Conditions_Precedent.txt
veridian_atlas/data/deals/Blackbay_III/processed/: chunks.jsonl  section.json  sections.json
veridian_atlas/data/deals/Blackbay_III/raw/: Master_Service_Agreement.txt  credit_agreement_v1.txt
veridian_atlas/data/deals/SilverRock_II/processed/: chunks.jsonl  sections.json
veridian_atlas/embeddings/: embedder.py
veridian_atlas/index/: index_builder.py
veridian_atlas/ingestion/: chunker.py  kickoff.py  router.py
veridian_atlas/ingestion/loaders/: main_loader.py  text_loader.py
veridian_atlas/kickoff/: start_chunker.py  start_embeddings.py  start_loader.py  test_rag.py
veridian_atlas/rag/: local_llm.py  query_service.py  rag_engine.py
(+4 files in other folders)
