[build-system]
requires = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "veridian-atlas"
version = "0.6.0"                           # Align with API version or tag releases
description = "RAG-based multi-deal document intelligence engine"
readme = "README.md"
requires-python = ">=3.10"                  # Match your CI matrix (3.10/3.11/3.12)
license = { file = "LICENSE" }
authors = [
  { name = "Ajay", email = "your-email@example.com" }
]

# -----------------------------------------------------------------------------------
# Core Dependencies (align this with requirements.txt)
# Avoid empty dependencies = false sense of stability
# -----------------------------------------------------------------------------------
dependencies = [
  "fastapi==0.110.0",
  "uvicorn==0.30.0",
  "chromadb==1.4.0",
  "sentence-transformers==2.6.1",
  "torch==2.2.0",
  "transformers==4.41.2",
  "httpx==0.24.1",
]

# Optional dependency groups: pip install "veridian-atlas[dev]"
[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "black",
  "mypy",
  "pre-commit"
]
cli = [
  "typer",
  "click",
]

# -----------------------------------------------------------------------------------
# Console entry point (lets users call your CLI globally)
# e.g. after install → `veridian query --deal Axiom --question "fees"`
# -----------------------------------------------------------------------------------
[project.scripts]
veridian = "veridian_atlas.cli.run_query:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

# -----------------------------------------------------------------------------------
# Ruff / Black / Mypy configuration (future-proof dev ops)
# -----------------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.mypy]
ignore_missing_imports = true
